# PKCertChain

./: .gitignore  CMakeLists.txt  README.md  main.c
Proofs/: PoC.h
Proofs/MiniPoW/: miniPoWChallenge.h  miniPoWSolve.h  miniPoWVerify.h
Telemetry/: telemetry_common.h  telemetry_core.c  wcet.h
adapters/: PKCAdapter.cpp  PKCAdapter.hpp
blockchain/: block.h  certificate.h
build-security/: CMakeCache.txt  compile_commands.json
datatype/: OpStatus.h  uint256_t.h
docs/: CurrentImplementation.md  MainNodeRoadmap.md  architecture.md  telemetry_core.h  telemetry_sink_file.c
include/: pkcertchain_config.h
include/Proofs/: powManager.h  powManager_ops.h
include/Proofs/MiniPoW/: miniPoWAck.h  miniPoWAck_ops.h  miniPoWChallenge.h  miniPoWChallengeQueueEntry_ops.h  miniPoWChallengeReceiveQueue.h  miniPoWChallengeReceiveQueue_ops.h  miniPoWChallengeSendQueue.h  miniPoWChallengeSendQueue_ops.h  miniPoWChallenge_ops.h  miniPoWClassify.h  miniPoWClassify_ops.h  miniPoWManager.h  miniPoWManagerTracker.h  miniPoWManagerTracker_ops.h  miniPoWManager_ops.h  miniPoWMatrix.h  miniPoWMatrix_ops.h  miniPoWQueue.h  miniPoWQueue_ops.h  miniPoWResult.h  miniPoWResult_ops.h  miniPoWSession.h  miniPoWSession_ops.h  miniPoWSolve.h  miniPoWSolve_ops.h  miniPoWTracker.h  miniPoWTracker_ops.h  miniPoWVerify.h  miniPoWVerify_ops.h  solvedMatricPoW.h  solvedMatricPoW_ops.h
include/Proofs/TierPoW/: tierPoWChallenge.h  tierPoWChallenge_ops.h  tierPoWQueue.h  tierPoWQueue_ops.h  tierPoWResult.h  tierPoWResult_ops.h  tierPoWSession.h  tierPoWSession_ops.h  tierPoWSolve.h  tierPoWSolve_ops.h  tierPoWVerify.h  tierPoWVerify_ops.h
include/blockchain/: Tier.h  block.h  block_ops.h  certificate.h  certificate_ops.h  pkcertchain.h  pkcertchain_ops.h
include/datatype/: OpStatus.h  uint256_t.h  uint256_t_ops.h  uint512.h  uint512_ops.h
include/telemetry/: telemetry_core.h  wcet.h
include/util/: EncUtils.h  LinuxUtils.h  SeedUtil.h  SignUtils.h  Size_Offsets.h  To_BO_BE_Pimitives.h  To_BO_Def_Primitives.h  WalletSetup.h  pack.h  ser_primitives.h  utilities.h
scripts/: run_unit_tests.sh  security_audit.sh  security_manual_check.sh
src/: main.c
src/telemetry/: telemetry_core.c  telemetry_sink_file.c
tests/: test_mgr  test_minipow_manager.c  test_pkcertchain_integration.c  test_pow_integration.c
tests/security/: README.md
tests/security/checklists/: owasp_top10_c_adapted.md  tooling_manual.md
tests/unit/: test_blockchain_PKCertChain_h.c  test_blockchain_block_h.c  test_blockchain_certificate_h.c  test_datatype_OpStatus_h.c  test_datatype_uint256_t_h.c  test_datatype_uint512_h.c  test_proofs_miniPoW_challenge_h.c  test_proofs_miniPoW_solve_h.c  test_proofs_miniPoW_verify_h.c  test_util_Size_Offsets_h.c  test_util_ser_primitives_h.c  test_util_utilities_h.c
util/: Size_Offsets.h  ser_primitives.h  utilities.h
